gatsby/src/assets/styles/components/_modal.scss
.aa-modal {
    .modal-card {
        padding: 20px;

        .modal-card-head {
            padding: 10px 20px;
            padding-top: 50px;
            padding-bottom: 10px;
            position: relative;

            p {
                font-weight: 500;
                color: $black;
                //@at-root: lowercase;
                font-weight: 700;
                max-width: 115px;
                line-height: 23.53px !important;
            }

            span {
                display: inline-block;
                width: 100%;

                @extend .has-text-right;
                @extend %cta;
            }

            .close-modal {
                cursor: pointer;
                position: absolute;
                top: 20px;
                right: 20px;

                .close {
                    height: 20px;
                    width: 20px;

                    > div {
                        height: 1px;
                    }
                }
            }
        }

        .modal-card-body {
            padding-top: 10px;

            p {
                &.designation {
                    @extend .mb-3;

                    font-weight: 500;
                }
            }
        }

        .modal-card-foot {
            padding: 10px 20px;
        }

        .modal-card-foot,
        .modal-card-head {
            border: 0;
            border-radius: 0;
            background-color: $white;
        }
    }

    @media screen and (min-width: 769px) {
        .modal-content,
        .modal-card {
            width: 900px;
        }
    }
}

